# SoftwareTesting

./: .clang-tidy  .gitignore  README.md
Lab2/: CMakeLists.txt
Lab2/src/: CMakeLists.txt
Lab2/src/graph_validation/: CMakeLists.txt
Lab2/src/graph_validation/include/: graph_validation.hpp
Lab2/src/merge/: CMakeLists.txt
Lab2/src/merge/include/: merge.hpp
Lab2/tests/: CMakeLists.txt  bgl_test.cpp  manual_testing.cpp
Lab3/: CMakeLists.txt  tests_results.txt
Lab3/src/: CMakeLists.txt
Lab3/src/graph_validation/: graph_validation.cpp
Lab3/src/graph_validation/include/: graph_validation.hpp
Lab3/src/merge/: merge.cpp
Lab3/src/merge/include/: merge.hpp
Lab3/tests/: CMakeLists.txt  automated_adj_list_testing.cpp  automated_adj_matrix_testing.cpp
Lab3/tests/input/: directed_10.txt  directed_100.txt  directed_1000.txt  sparse_graph_10.txt  sparse_graph_100.txt  sparse_graph_1000.txt  sparse_topsort_10.txt  sparse_topsort_100.txt  sparse_topsort_1000.txt  topsort_10.txt  topsort_100.txt  topsort_1000.txt  undirected_10.txt  undirected_100.txt  undirected_1000.txt
Lab3/tests/output/: bfs_100.txt  bfs_1000.txt  dijkstra_10.txt  dijkstra_100.txt  dijkstra_1000.txt  directed_1000_struct.txt  directed_100_struct.txt  directed_10_struct.txt  topsort_10.txt  topsort_100.txt  topsort_1000.txt  undirected_1000_struct.txt  undirected_100_struct.txt  undirected_10_struct.txt
